fix white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3332,6 +3332,10 @@ p {
     /* background-color: red; */
     bottom: -90px;
   }
+
+  .second-section-padding {
+    padding-top: 0px !important;
+  }
 }
 
 .banner-area h4 {
